feacfeacmanifest.json generate

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,2 +1,5 @@
-$violet: #000;
-$yellow: #F9C802;
+$coyoteBrown: #73683B;
+$brown: #583E23;
+$darkGunMetal: #13262F;
+$russianGreen: #73956F;
+$iguanaGreen: #7BAE7F;
