--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,16 +1,18 @@
 @import "_normalize";
 @import "_variables";
-
-
+@import url('https://fonts.googleapis.com/css?family=M+PLUS+1p:400,700&display=swap&subset=latin-ext');
 html {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
-*, *:before, *:after {
-  box-sizing: inherit;
+*,
+*:before,
+*:after {
+    box-sizing: inherit;
 }
 
 body {
-  color: $yellow;
-  background: $violet;
+    color: #fff;
+    background: $coyoteBrown;
+    font-family: 'M PLUS 1p';
 }
