--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -15,4 +15,48 @@ body {
     color: #fff;
     background: $coyoteBrown;
     font-family: 'M PLUS 1p';
+    font-weight: 400px;
+}
+
+.heading {
+    font-size: 24px;
+    margin: 0 0 64px 0;
+    padding: 0;
+}
+
+.button-kit {
+    color: #fff;
+    padding: 0;
+    margin: 0;
+    border: none;
+    background: none;
+    width: 0;
+    height: 0;
+    border-left: 50px solid transparent;
+    border-right: 50px solid transparent;
+    border-bottom: 50px solid $iguanaGreen;
+}
+
+.button-knowledge {
+    color: #fff;
+    padding: 0;
+    margin: 0;
+    background: none;
+    border-bottom: 50px solid $iguanaGreen;
+    border-left: 50px solid transparent;
+    border-right: 50px solid transparent;
+    height: 0;
+    width: 200px;
+}
+
+.button-WillToLive {
+    color: #fff;
+    padding: 0;
+    margin: 0;
+    background: none;
+    border-bottom: 50px solid $iguanaGreen;
+    border-left: 50px solid transparent;
+    border-right: 50px solid transparent;
+    height: 0;
+    width: 300px;
 }
